[package]
name = "allium"
version = "0.1.0"
authors = [
    "Dominik Stolz <d.stolz@tum.de>",
    "Oliver Jacobsen <oliver.jacobsen@tum.de>"
]
license = "MIT"
description = "Allium is a Rust library for onion routing."
repository = "https://github.com/tum-taskforce/allium"
categories = ["network-programming"]
edition = "2018"
exclude = [
    "docs/*",
    "*.ini",
    "*.pem",
]

[[bin]]
name = "allium-deamon"
path = "src/main.rs"

[dependencies]
tokio = { version = "0.3", features = ["full"] }
futures = "0.3"
ring = { version = "0.16.15", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.13"
bytes = "0.5"
log = "0.4"
pretty_env_logger = "0.4"
rust-ini = "0.16"

[patch.crates-io]
ring = { git = "https://github.com/voidc/ring", branch = "open-no-tag" }
