[package]
name = "allium"
version = "0.1.2"
authors = [
    "Dominik Stolz <d.stolz@tum.de>",
    "Oliver Jacobsen <oliver.jacobsen@tum.de>"
]
license = "MIT"
description = "Allium is a Rust library for onion routing."
repository = "https://github.com/tum-taskforce/allium"
categories = ["network-programming"]
edition = "2018"
exclude = [
    "docs/*",
    "*.ini",
    "*.pem",
]

[[bin]]
name = "allium-daemon"
path = "src/allium_daemon.rs"

[features]
crypto_ring = ["ring", "base64", "once_cell"]

[dependencies]
tokio = { version = "1.2", features = ["full"] }
tokio-stream = "0.1"
ring = { version = "0.16.15", features = ["std"], optional = true }
openssl = { version = "0.10.32" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
anyhow = "1.0"
thiserror = "1.0"
base64 = { version = "0.13", optional = true }
once_cell = { version = "1.5.2", optional = true }
bytes = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
rust-ini = "0.16"

[patch.crates-io]
ring = { git = "https://github.com/voidc/ring", branch = "open-no-tag" }
