[package]
name = "allium-daemon"
version = "0.1.3"
authors = [
    "Dominik Stolz <d.stolz@tum.de>",
    "Oliver Jacobsen <oliver.jacobsen@tum.de>"
]
license = "MIT"
description = "Allium is a Rust library for onion routing."
repository = "https://github.com/tum-taskforce/allium"
categories = ["network-programming"]
edition = "2018"

[dependencies]
allium = { path = "..", version = "0.1.3" }
tokio = { version = "1.8", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1.0"
bytes = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
rust-ini = { version = "0.16", optional = true }
